--- a/src/styles/services.module.css
+++ b/src/styles/services.module.css
@@ -10,7 +10,14 @@
     font-weight: 500;
   }
   .servicesStyle p {
-    color: #ccc;
+    color: #2f2f2f;
     margin-top: 4px;
     text-align: center;
+  }
+
+  .servicesStyle h2 {
+    justify-content: center;
+    position: relative;
+    text-align: center;
+    font-weight: 500;
   }
