--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -162,3 +162,29 @@ a {
     color: #3CA0E7;
   }
 }
+
+/*Banner */
+.banner-container {
+  background-color: #f5f5f5; /* Grey background color */
+  padding: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.banner-text {
+  text-align: left;
+  margin-right: 20px; /* Adjust spacing between text and images */
+}
+
+.banner-logos {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.banner-logos img {
+  max-width: 500px; /* Adjust dimensions as needed */
+  max-height: 115px; /* Adjust dimensions as needed */
+  padding-left: 75px;
+  margin: 0 100px; /* Adjust margin to control spacing between images */
+}
